--- a/README.html
+++ b/README.html
@@ -10,20 +10,7 @@ Simple Discord.js bot
 2.) Extract where you want to place the bot
 3.) Open Popuko master hold shift and right click on a blank spot in the file and then click "Open PowerShell window here"
 4.) In the terminal type "npm install discord.js".
-
-and be sure to install all these requirements aswell or bot will not work properly
-
-npm install ms 
-npm install fs
-npm install request
-npm install figlet
-npm install mathjs
-npm install snekfetch
-npm install request-promise-native
-npm install custom-translate
-npm install weather-js
-npm install google
-
+4.1.) Now in the powershell type "node package.js" to install the required packages to run this bot
 5.) Open your code editor software and drag and drop botconfig.json into text editor
 6.) you will see "token": "PUT YOUR BOT TOKEN HERE"
 7.) Go back to the powershell terminal and type node index.js
